<resources>
    <string name="app_name">Popular Movies - tallLeRoy</string>
    <string name="action_settings">Settings</string>
    <string name="pref_summary_sort_order">Select the order in which you prefer to have the movies sorted.</string>
    <string name="pref_header_sort_order">Sort Order</string>
    <string name="pref_header_general">General</string>
    <string name="pref_moviedb_api_key">theMovieDB API Key</string>
    <string name="pref_summary_moviedb_api_key">Get an API key from themoviedb.org and enter it here, this is required for all access to that database.</string>
    <string name="pref_sort_order_list">sort_order_list</string>
    <string name="pref_api_key_text">api_key_text</string>
    <string name="pref_new_data_loaded">new data loaded</string>

    <string name="pref_value_sort_order_popularity" translatable="false">1</string>
    <string name="pref_value_sort_order_rating" translatable="false">2</string>
    <string name="pref_value_sort_order_favorite" translatable="false">3</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_entry_sort_order_popularity">Most Popular</string>
    <string name="pref_entry_sort_order_rating">Highest Rating</string>
    <string name="pref_entry_sort_order_favorite">Favorite Movies</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">popularmovies_tallleroy.leroy.example.com</string>
    <string name="content_authority">com.example.leroy.popularmovies_tallleroy</string>
    <string name="MovieDetail">MovieDetail</string>
    <string name="mainActivityActionBar">Pop Movies</string>
    <string name="movieSummaryExtra">movieSummary</string>
    <string name="gather_api_key_instructions">You will need to register and obtain an API key from the moviedb.org. For registration use https://www.themoviedb.org/account/signup. Once registered, log into your account at https://www.themoviedb.org. Select API on the left column. Then generate an API Key on that page. It may take a few days to receive your key via email. The keys are very long, so take care entering it. You may edit your API Key on the Settings menu. This first download can take up to a minute before you see any movies.</string>
    <string name="gather_api_key_dialog_title">Input themoviedb.org API Key</string>
    <string name="trailers_heading">Trailers:</string>
    <string name="reviews_heading">Reviews:</string>
    <string name="action_share">Share First Trailer URL</string>
</resources>
