<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

   <ListPreference
        android:key="@string/pref_sort_order_list"
        android:title="@string/pref_header_sort_order"
        android:summary="@string/pref_summary_sort_order"
        android:entries="@array/pref_entries_sort_order"
        android:entryValues="@array/pref_values_sort_order"
        android:defaultValue="@string/pref_value_sort_order_popularity" />

     <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_api_key_text"
        android:title="@string/pref_moviedb_api_key"
        android:summary="@string/pref_summary_moviedb_api_key"
        android:singleLine="true"
        android:maxLines="1" />

</PreferenceScreen>
